fix gaps in login

--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -167,7 +167,7 @@
     .login {
         &__container {
             flex-wrap: wrap;
-            gap: 0rem;
+            gap: 7rem;
             justify-content: center;
             padding-top: 3rem;
             padding: 3rem 0.5rem 0 0.5rem;
